# dsiem-backend

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml
.github/workflows/: code-coverage.yml  pr.yml  publish.yml
configs/: directives_dsiem-backend-0_testing1 copy.json  directives_dsiem-backend-0_testing2.json
demo/: get.sh  readme.md
docker/: Dockerfile
docker/s6files/services.d/dsiem/: run
fixtures/configs/directives/directive2/15/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/16/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/17/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/18/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/19/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/20/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/21/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/22/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/23/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/24/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/25/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/26/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive5/: directives_dsiem-backend-0_testing1.json
scripts/: build-musl.sh
src/: asset.rs  backlog.rs  config.rs  directive.rs  event.rs  intel.rs  logger.rs  main.rs  manager.rs  rule.rs  utils.rs  vuln.rs  watchdog.rs  worker.rs  xcorrelator.rs
src/intel/: wise.rs
