[package]
name = "dsiem-backend-rs"
version = "0.33.6"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
serde_derive = "1.0.152"
serde_repr = "0.1"
glob = "0.3.1"
regex = "1.7.1"
cidr = { version = "0.2.1", features = ["serde"] }
nats = "0.23.1"
tokio = { version = "1.25.0", features = ["macros", "sync", "rt-multi-thread"] }
chrono = { version = "0.4.23", features = ["serde"] }
async-nats = "0.27.0"
reqwest = "0.11.14"
anyhow = "1.0.68"
futures = "0.3.26"
nanoid = "0.4.0"

[dependencies.clap]
version = "4.1.4"
features = ["help", "std", "derive", "env" ]
optional = false
default-features = false
